[gd_scene load_steps=5 format=3 uid="uid://c7bd8sgybcou7"]

[ext_resource type="Script" path="res://ENEMIES/1_COMUN/GUARDIA/SCRIPTS/bullets.gd" id="1_exmnf"]
[ext_resource type="Texture2D" uid="uid://cjjjwf4d4om2s" path="res://icon.svg" id="2_koxv3"]
[ext_resource type="Script" path="res://FMS/Attack_Box.gd" id="3_f3lfm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53grf"]
size = Vector2(17.5, 15)

[node name="bullets" type="Area2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_exmnf")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_koxv3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.875, 0.75)

[node name="Attack_Box" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("3_f3lfm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Box"]
position = Vector2(0, -2.98023e-07)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_53grf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_53grf")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
